# phototron

./: .gitignore  .readme  LICENSE  README.md  cam_preview.py  config.js  config.json  config_SAMPLE.cfg  last_session.txt  main.py  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  server.js  test.py  test_button.py  test_lights.py  test_neo.py  test_pwm.py
app/: account.py  account_SAMPLE.py  camera.py  collage.py  collage_old.py  collage_renderer.py  config.cfg  config.py  config_OLD.py  config_SAMPLE.cfg  core.py  editable_keys.cfg  emailer.py  lights.py  lights_effects.py  lights_old.py  lights_test.py  live_config.py  paths.py  print.py  version.py
app/queue/: email_queue.json
app/screens/: capture.py  email.py  idle copy.py  idle.py  idle_x.py  preview.py  settings.py
app/styles/default/: settings.qss  style.qss  template.toml
app/styles/threedayweekend/: idle.qss  style.qss
app/templates/email/: email_template.html
app/templates/photo/classy-4x6/: template.toml
app/widgets/: slideshow-backup.py  slideshow.py
docs/: chart.mmd  flowchart.mmd
public/: index.html  take.html
public/css/: main.css
public/js/: app.js  take-browser.js  take.js
routes/: composite.js  upload-browser-photo.js
templates/classic/: layout.json
views/: index.ejs
